Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <button id="b1"></button> 
       <button id="b3" onclick="click()"></button>
   
-  <audio id="meu-audio" src="https://jonaskl3.github.io/Digital-Clock/clock.mp3"></audio>
+  <audio id="meu-audio" src="https://jonaskl3.github.io/Digital-clock/clock.mp3"></audio>
 
 
 
